[gd_scene load_steps=3 format=2]

[ext_resource path="res://gui/theme_data/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://gui/scripts/pause_gui.gd" type="Script" id=2]

[node name="PauseMenuGUI" type="Control"]
pause_mode = 2
modulate = Color( 1.13, 1.13, 1.13, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 256.0
margin_bottom = 144.0
color = Color( 0, 0, 0, 0.333333 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="."]
margin_left = 84.0
margin_top = 44.0
margin_right = 170.0
margin_bottom = 54.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -42.0
margin_top = -28.0
margin_right = 42.0
margin_bottom = 30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 84.0
margin_bottom = 10.0
text = "GAME PAUSED"
align = 1

[node name="ContBtn" type="Button" parent="VBoxContainer"]
margin_top = 14.0
margin_right = 84.0
margin_bottom = 26.0
text = "Continue"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestartBtn" type="Button" parent="VBoxContainer"]
margin_top = 30.0
margin_right = 84.0
margin_bottom = 42.0
text = "RESTART"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBtn" type="Button" parent="VBoxContainer"]
margin_top = 46.0
margin_right = 84.0
margin_bottom = 58.0
text = "MAIN MENU"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="VBoxContainer/ContBtn" to="." method="_on_ContBtn_button_up"]
[connection signal="button_down" from="VBoxContainer/RestartBtn" to="." method="_on_RestartBtn_button_down"]
[connection signal="button_up" from="VBoxContainer/RestartBtn" to="." method="_on_RestartBtn_button_up"]
[connection signal="button_down" from="VBoxContainer/MenuBtn" to="." method="_on_MenuBtn_button_down"]
[connection signal="button_up" from="VBoxContainer/MenuBtn" to="." method="_on_MenuBtn_button_up"]
[connection signal="button_up" from="VBoxContainer/MenuBtn" to="." method="_on_QuitBtn_button_up"]
